Dark mode adjustments, debounce for search for performance issues

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,6 +16,10 @@
       border-bottom-color: var(--contrast);
     }
 
+    :global(.MuiInput-underline:after) {
+      border-bottom-color: var(--contrast);
+    }
+
     :global(.MuiSelect-icon) {
       color: var(--contrast);
     }
