--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -17,7 +17,6 @@
     padding: 10px;
     max-width: 1200px;
     background-color: var(--bgsecondary);
-    border: 1px solid black;
     border-radius: 3px;
   }
 }
